# effy

./: .gitignore  AGENTS.md  CONTRIBUTING.md  CREDITS.md  LICENSE  README.md  SPECIFICATION.md  benchmark_scaling.py  pyproject.toml  test_scale.py
.github/workflows/: ci.yml  release.yml
Effy/: README.md  __init__.py  error.py  scene.py  types.py
Effy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Effy/_internal/: __init__.py  effect.py  fp.py  pool.py  registry.py  result.py
Effy/audio/: __init__.py  audio_ext.py  convert.py  device.py  stream.py  types.py  wav.py
Effy/clipboard/: __init__.py
Effy/compat/: __init__.py
Effy/events/: __init__.py  filter.py  queue.py  types.py
Effy/filesystem/: __init__.py  asset_manager.py  rwops.py
Effy/init/: __init__.py  flags.py
Effy/input/: __init__.py  gamepad.py  haptics.py  keyboard.py  mouse.py  sensors.py  touch.py
Effy/math/: __init__.py  pathfinding.py  physics.py
Effy/network/: __init__.py  state.py  udp.py
Effy/platform/: __init__.py  headless.py  linux_x11.py  macos_quartz.py  windows_gdi.py
Effy/render/: __init__.py  commands.py  compiler.py  gpu_context.py  gpu_driver.py  rasterizer.py  renderer.py  shader.py  texture.py
benchmarks/: COMPREHENSIVE_REPORT.md  PIPELINE_FPS_REPORT.md  bench_pipeline.py  run_suite.py
demos/: README.md  demo_audio.py  demo_blit.py  demo_font.py  demo_graphics.py  demo_input.py  demo_polygon_curve.py  demo_sdf.py  demo_stress.py  demo_window.py
docs/: USER_GUIDE.md
tests/: test_math_pathfinding.py  test_scene.py  test_video_camera.py
tools/: run_profiler.py
(+60 files in other folders)
